sign-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: signin-service
spec:
  selector:
    app: signin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
