signup-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: signup-service
spec:
  selector:
    app: signup
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
